Refactor code structure for improved readability and maintainability

--- a/bank_statement/ivl3_2b_bank_statement_3turn_table.ipynb
+++ b/bank_statement/ivl3_2b_bank_statement_3turn_table.ipynb
@@ -910,6 +910,7 @@
    "source": [
     "# Cell: Balance-Based Debit/Credit Validation Function\n",
     "# CRITICAL: Rows must be sorted by date for balance validation to work correctly\n",
+    "# BUT: Returns rows in ORIGINAL order to match ground truth for evaluation\n",
     "\n",
     "from dateutil import parser as date_parser\n",
     "\n",
@@ -926,11 +927,14 @@
     "        date_col: Name of the Date column\n",
     "    \n",
     "    Returns:\n",
-    "        Tuple of (sorted_rows, was_sorted) where was_sorted indicates if sorting changed order\n",
+    "        Tuple of (sorted_rows, original_indices, was_reordered) where:\n",
+    "        - sorted_rows: Rows sorted by date\n",
+    "        - original_indices: List mapping sorted position -> original position\n",
+    "        - was_reordered: True if sorting changed the order\n",
     "    \"\"\"\n",
     "    if not rows or date_col not in rows[0]:\n",
     "        print(f\"\u26a0\ufe0f  Date column '{date_col}' not found - cannot sort\")\n",
-    "        return rows, False\n",
+    "        return rows, list(range(len(rows))), False\n",
     "    \n",
     "    def parse_date(date_str):\n",
     "        \"\"\"Parse date string to datetime for sorting.\"\"\"\n",
@@ -952,19 +956,19 @@
     "    failed_parses = sum(1 for d, _, _ in dated_rows if d is None)\n",
     "    if failed_parses > len(rows) * 0.5:\n",
     "        print(f\"\u26a0\ufe0f  Too many date parse failures ({failed_parses}/{len(rows)}) - cannot sort reliably\")\n",
-    "        return rows, False\n",
+    "        return rows, list(range(len(rows))), False\n",
     "    \n",
     "    # Sort by date (None dates go to end)\n",
     "    sorted_dated = sorted(dated_rows, key=lambda x: (x[0] is None, x[0]))\n",
     "    \n",
-    "    # Extract sorted rows\n",
+    "    # Extract sorted rows and original indices\n",
     "    sorted_rows = [row for _, _, row in sorted_dated]\n",
+    "    original_indices = [orig_idx for _, orig_idx, _ in sorted_dated]\n",
     "    \n",
     "    # Check if order changed\n",
-    "    original_indices = [i for _, i, _ in sorted_dated]\n",
-    "    was_sorted = original_indices != list(range(len(rows)))\n",
+    "    was_reordered = original_indices != list(range(len(rows)))\n",
     "    \n",
-    "    return sorted_rows, was_sorted\n",
+    "    return sorted_rows, original_indices, was_reordered\n",
     "\n",
     "\n",
     "def detect_document_order(rows, balance_col):\n",
@@ -1013,16 +1017,14 @@
     "    \"\"\"\n",
     "    Use balance changes to validate and correct debit/credit alignment.\n",
     "    \n",
-    "    CRITICAL: This function now SORTS rows by date first! LLM extraction often\n",
-    "    returns rows in scrambled order. Balance validation requires sequential\n",
-    "    date order to work correctly.\n",
+    "    CRITICAL: This function SORTS rows by date for validation, but RETURNS\n",
+    "    rows in their ORIGINAL order to preserve ground truth alignment for evaluation.\n",
     "    \n",
-    "    IMPORTANT: After sorting, detects document order (chronological vs \n",
-    "    reverse chronological) and adjusts validation logic accordingly.\n",
-    "    \n",
-    "    For CHRONOLOGICAL order (oldest first - after sorting):\n",
-    "    - Balance increase between rows = CREDIT (income/deposit)\n",
-    "    - Balance decrease between rows = DEBIT (expense/withdrawal)\n",
+    "    Process:\n",
+    "    1. Sort rows by date (for accurate balance validation)\n",
+    "    2. Validate and correct using sorted order\n",
+    "    3. Map corrections back to original row positions\n",
+    "    4. Return rows in ORIGINAL order with corrections applied\n",
     "    \n",
     "    Args:\n",
     "        rows: List of dictionaries (parsed markdown table rows)\n",
@@ -1033,7 +1035,7 @@
     "        date_col: Name of the Date column (for sorting)\n",
     "    \n",
     "    Returns:\n",
-    "        List of corrected row dictionaries (in sorted date order)\n",
+    "        List of corrected row dictionaries (in ORIGINAL order, not sorted)\n",
     "    \"\"\"\n",
     "    \n",
     "    def parse_amount(value):\n",
@@ -1057,9 +1059,9 @@
     "        print(f\"\u26a0\ufe0f  Balance column '{balance_col}' not found - skipping validation\")\n",
     "        return rows\n",
     "    \n",
-    "    # CRITICAL: Sort rows by date FIRST before validation\n",
+    "    # CRITICAL: Sort rows by date FIRST for accurate validation\n",
     "    print(\"\ud83d\udcc5 Sorting rows by date for accurate balance validation...\")\n",
-    "    sorted_rows, was_reordered = sort_rows_by_date(rows, date_col)\n",
+    "    sorted_rows, original_indices, was_reordered = sort_rows_by_date(rows, date_col)\n",
     "    \n",
     "    if was_reordered:\n",
     "        print(\"\u2705 Rows were reordered by date (LLM extraction was not in date order)\")\n",
@@ -1074,42 +1076,51 @@
     "        print(\"\ud83d\udca1 Reverse chronological detected even after date sorting\")\n",
     "        print(\"\ud83d\udca1 Validation logic inverted: balance increase \u2192 DEBIT, balance decrease \u2192 CREDIT\")\n",
     "    \n",
-    "    corrected_rows = []\n",
+    "    # Create a copy of original rows for correction (preserves original order)\n",
+    "    corrected_rows = [row.copy() for row in rows]\n",
     "    corrections_made = 0\n",
+    "    \n",
+    "    # Build reverse mapping: original_index -> sorted_index\n",
+    "    sorted_to_original = {sorted_idx: orig_idx for sorted_idx, orig_idx in enumerate(original_indices)}\n",
+    "    \n",
+    "    # Track which sorted indices are balance rows (to skip)\n",
+    "    balance_row_indices = set()\n",
+    "    for sorted_idx, row in enumerate(sorted_rows):\n",
+    "        if is_balance_row(row, desc_col):\n",
+    "            balance_row_indices.add(sorted_idx)\n",
+    "    \n",
+    "    # Validate using SORTED order, apply corrections to ORIGINAL positions\n",
     "    start_idx = 0\n",
     "    \n",
-    "    # Check if row 0 is an opening balance row\n",
+    "    # Check if row 0 (in sorted order) is an opening balance row\n",
     "    if sorted_rows and is_balance_row(sorted_rows[0], desc_col):\n",
-    "        print(f\"\u2705 Row 0: Opening/closing balance detected - skipping (not a transaction)\")\n",
+    "        print(f\"\u2705 Sorted row 0: Opening/closing balance detected - skipping (not a transaction)\")\n",
     "        start_idx = 1\n",
     "    elif sorted_rows:\n",
-    "        # Row 0 is a regular transaction - include it without validation\n",
-    "        corrected_rows.append(sorted_rows[0].copy())\n",
-    "        print(f\"\u2705 Row 0: First transaction included without validation (no previous balance to compare)\")\n",
+    "        print(f\"\u2705 Sorted row 0: First transaction included without validation (no previous balance to compare)\")\n",
     "        start_idx = 1\n",
     "    \n",
-    "    # Validate and correct remaining rows (can compare to previous row)\n",
-    "    for i in range(start_idx, len(sorted_rows)):\n",
-    "        current_row = sorted_rows[i].copy()\n",
+    "    # Validate remaining rows using sorted order\n",
+    "    for sorted_idx in range(start_idx, len(sorted_rows)):\n",
+    "        current_row = sorted_rows[sorted_idx]\n",
+    "        original_idx = original_indices[sorted_idx]\n",
     "        \n",
-    "        # Skip balance rows (opening/closing balance)\n",
-    "        if is_balance_row(current_row, desc_col):\n",
-    "            print(f\"\u26a0\ufe0f  Row {i}: Opening/closing balance row detected - skipping (not a transaction)\")\n",
+    "        # Skip balance rows\n",
+    "        if sorted_idx in balance_row_indices:\n",
+    "            print(f\"\u26a0\ufe0f  Sorted row {sorted_idx}: Opening/closing balance row detected - skipping\")\n",
     "            continue\n",
     "        \n",
-    "        # Find the previous non-balance row for comparison\n",
-    "        prev_idx = i - 1\n",
-    "        while prev_idx >= 0 and is_balance_row(sorted_rows[prev_idx], desc_col):\n",
-    "            prev_idx -= 1\n",
+    "        # Find previous non-balance row in sorted order\n",
+    "        prev_sorted_idx = sorted_idx - 1\n",
+    "        while prev_sorted_idx >= 0 and prev_sorted_idx in balance_row_indices:\n",
+    "            prev_sorted_idx -= 1\n",
     "        \n",
-    "        if prev_idx < 0:\n",
-    "            # No previous row to compare (first transaction after opening balance)\n",
-    "            corrected_rows.append(current_row)\n",
-    "            print(f\"\u2705 Row {i}: First transaction after balance row - included without validation\")\n",
+    "        if prev_sorted_idx < 0:\n",
+    "            print(f\"\u2705 Sorted row {sorted_idx}: First transaction after balance row - included without validation\")\n",
     "            continue\n",
     "        \n",
-    "        # Parse balances\n",
-    "        prev_balance = parse_amount(sorted_rows[prev_idx].get(balance_col, \"0\"))\n",
+    "        # Parse balances from sorted rows\n",
+    "        prev_balance = parse_amount(sorted_rows[prev_sorted_idx].get(balance_col, \"0\"))\n",
     "        curr_balance = parse_amount(current_row.get(balance_col, \"0\"))\n",
     "        \n",
     "        # Calculate balance change\n",
@@ -1119,51 +1130,46 @@
     "        debit_value = parse_amount(current_row.get(debit_col, \"\"))\n",
     "        credit_value = parse_amount(current_row.get(credit_col, \"\"))\n",
     "        \n",
-    "        # CRITICAL: Adjust validation logic based on document order\n",
-    "        if doc_order == \"reverse_chronological\":\n",
-    "            # INVERTED logic for reverse chronological documents\n",
-    "            if balance_change > 0.01:  # Balance increased going down (reverse chrono = DEBIT)\n",
-    "                if credit_value > 0 and debit_value == 0:\n",
-    "                    print(f\"\u26a0\ufe0f  Row {i}: Balance increased by ${balance_change:.2f} (reverse chrono \u2192 DEBIT expected) but amount in Credit column\")\n",
-    "                    print(f\"   Correction: Moving ${credit_value:.2f} from Credit \u2192 Debit\")\n",
-    "                    current_row[debit_col] = current_row[credit_col]\n",
-    "                    current_row[credit_col] = \"\"\n",
-    "                    corrections_made += 1\n",
-    "                    \n",
-    "            elif balance_change < -0.01:  # Balance decreased going down (reverse chrono = CREDIT)\n",
-    "                if debit_value > 0 and credit_value == 0:\n",
-    "                    print(f\"\u26a0\ufe0f  Row {i}: Balance decreased by ${abs(balance_change):.2f} (reverse chrono \u2192 CREDIT expected) but amount in Debit column\")\n",
-    "                    print(f\"   Correction: Moving ${debit_value:.2f} from Debit \u2192 Credit\")\n",
-    "                    current_row[credit_col] = current_row[debit_col]\n",
-    "                    current_row[debit_col] = \"\"\n",
-    "                    corrections_made += 1\n",
-    "        else:\n",
-    "            # Standard logic for chronological documents (after sorting)\n",
-    "            if balance_change > 0.01:  # Balance increased = CREDIT\n",
-    "                if debit_value > 0 and credit_value == 0:\n",
-    "                    print(f\"\u26a0\ufe0f  Row {i}: Balance increased by ${balance_change:.2f} but amount in Debit column\")\n",
-    "                    print(f\"   Correction: Moving ${debit_value:.2f} from Debit \u2192 Credit\")\n",
-    "                    current_row[credit_col] = current_row[debit_col]\n",
-    "                    current_row[debit_col] = \"\"\n",
-    "                    corrections_made += 1\n",
-    "                    \n",
-    "            elif balance_change < -0.01:  # Balance decreased = DEBIT\n",
-    "                if credit_value > 0 and debit_value == 0:\n",
-    "                    print(f\"\u26a0\ufe0f  Row {i}: Balance decreased by ${abs(balance_change):.2f} but amount in Credit column\")\n",
-    "                    print(f\"   Correction: Moving ${credit_value:.2f} from Credit \u2192 Debit\")\n",
-    "                    current_row[debit_col] = current_row[credit_col]\n",
-    "                    current_row[credit_col] = \"\"\n",
-    "                    corrections_made += 1\n",
+    "        # Determine if correction needed and apply to ORIGINAL position\n",
+    "        correction_needed = False\n",
+    "        swap_to_debit = False  # True = move from Credit to Debit, False = move from Debit to Credit\n",
     "        \n",
-    "        corrected_rows.append(current_row)\n",
+    "        if doc_order == \"reverse_chronological\":\n",
+    "            if balance_change > 0.01 and credit_value > 0 and debit_value == 0:\n",
+    "                correction_needed = True\n",
+    "                swap_to_debit = True\n",
+    "                print(f\"\u26a0\ufe0f  Row {original_idx} (sorted {sorted_idx}): Balance increased by ${balance_change:.2f} \u2192 moving ${credit_value:.2f} Credit \u2192 Debit\")\n",
+    "            elif balance_change < -0.01 and debit_value > 0 and credit_value == 0:\n",
+    "                correction_needed = True\n",
+    "                swap_to_debit = False\n",
+    "                print(f\"\u26a0\ufe0f  Row {original_idx} (sorted {sorted_idx}): Balance decreased by ${abs(balance_change):.2f} \u2192 moving ${debit_value:.2f} Debit \u2192 Credit\")\n",
+    "        else:\n",
+    "            if balance_change > 0.01 and debit_value > 0 and credit_value == 0:\n",
+    "                correction_needed = True\n",
+    "                swap_to_debit = False\n",
+    "                print(f\"\u26a0\ufe0f  Row {original_idx} (sorted {sorted_idx}): Balance increased by ${balance_change:.2f} \u2192 moving ${debit_value:.2f} Debit \u2192 Credit\")\n",
+    "            elif balance_change < -0.01 and credit_value > 0 and debit_value == 0:\n",
+    "                correction_needed = True\n",
+    "                swap_to_debit = True\n",
+    "                print(f\"\u26a0\ufe0f  Row {original_idx} (sorted {sorted_idx}): Balance decreased by ${abs(balance_change):.2f} \u2192 moving ${credit_value:.2f} Credit \u2192 Debit\")\n",
+    "        \n",
+    "        # Apply correction to the ORIGINAL position\n",
+    "        if correction_needed:\n",
+    "            if swap_to_debit:\n",
+    "                corrected_rows[original_idx][debit_col] = corrected_rows[original_idx][credit_col]\n",
+    "                corrected_rows[original_idx][credit_col] = \"\"\n",
+    "            else:\n",
+    "                corrected_rows[original_idx][credit_col] = corrected_rows[original_idx][debit_col]\n",
+    "                corrected_rows[original_idx][debit_col] = \"\"\n",
+    "            corrections_made += 1\n",
     "    \n",
     "    print(f\"\\n\u2705 Balance validation complete: {corrections_made} corrections made\")\n",
-    "    print(f\"\u2705 Total transaction rows processed: {len(corrected_rows)}\")\n",
+    "    print(f\"\u2705 Total rows processed: {len(rows)} (returned in ORIGINAL order)\")\n",
     "    return corrected_rows\n",
     "\n",
     "print(\"\u2705 Balance validation function defined\")\n",
-    "print(\"\ud83d\udca1 CRITICAL: Rows are now SORTED BY DATE before validation\")\n",
-    "print(\"\ud83d\udca1 This fixes issues where LLM extraction returns scrambled row order\")\n",
+    "print(\"\ud83d\udca1 CRITICAL: Rows are SORTED BY DATE for validation accuracy\")\n",
+    "print(\"\ud83d\udca1 CRITICAL: Rows are RETURNED IN ORIGINAL ORDER for ground truth evaluation\")\n",
     "print(\"\ud83d\udca1 Opening/closing balance rows are automatically detected and skipped\")"
    ]
   }
