Refactor code structure for improved readability and maintainability

--- a/bank_statement/ivl3_8b_bank_statement_2turn_balance_prompt.ipynb
+++ b/bank_statement/ivl3_8b_bank_statement_2turn_balance_prompt.ipynb
@@ -1663,6 +1663,36 @@
     "    }\n",
     "\n",
     "\n",
+    "# Filter for debit transactions (taxpayer paid)\n",
+    "def filter_debit_transactions(rows, debit_col):\n",
+    "    \"\"\"Filter rows to only include debit transactions.\"\"\"\n",
+    "    debit_rows = []\n",
+    "    for row in rows:\n",
+    "        debit_value = row.get(debit_col, \"\").strip()\n",
+    "        # Check if there's a debit amount (not empty, not \"NOT_FOUND\")\n",
+    "        if debit_value and debit_value.upper() != \"NOT_FOUND\":\n",
+    "            debit_rows.append(row)\n",
+    "    return debit_rows\n",
+    "\n",
+    "# Apply balance validation first (on all_rows)\n",
+    "all_rows = validate_and_correct_alignment(all_rows, balance_col, debit_col, credit_col, desc_col, date_col)\n",
+    "\n",
+    "# Then filter to debit transactions only\n",
+    "debit_rows = filter_debit_transactions(all_rows, debit_col)\n",
+    "print(f\"\\n\ud83d\udcb0 Filtered to {len(debit_rows)} debit transactions (taxpayer purchases)\")\n",
+    "\n",
+    "# Display debit transactions\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"DEBIT TRANSACTIONS (WHAT TAXPAYER PAID):\")\n",
+    "print(\"=\" * 60)\n",
+    "for i, row in enumerate(debit_rows[:10], 1):\n",
+    "    print(f\"\\nTransaction {i}:\")\n",
+    "    print(f\"  {date_col}: {row.get(date_col, '')}\")\n",
+    "    print(f\"  {desc_col}: {row.get(desc_col, '')}\")\n",
+    "    print(f\"  {debit_col}: {row.get(debit_col, '')}\")\n",
+    "if len(debit_rows) > 10:\n",
+    "    print(f\"\\n... and {len(debit_rows) - 10} more transactions\")\n",
+    "\n",
     "schema_fields = extract_schema_fields(debit_rows, date_col, desc_col, debit_col, all_rows=all_rows)\n",
     "\n",
     "print(\"\\n\" + \"=\" * 60)\n",
