Refactor evaluation code in bank_statement notebook for improved readability and maintainability

--- a/bank_statement/ivl3_2b_bank_statement_2turn_balance_prompt.ipynb
+++ b/bank_statement/ivl3_2b_bank_statement_2turn_balance_prompt.ipynb
@@ -1649,8 +1649,8 @@
     "            gt_val = \"NOT_FOUND\"\n",
     "        \n",
     "        print(f\"\\n{field}:\")\n",
-    "        print(f\"  Extracted:    {str(extracted_val)[:80]}{'...' if len(str(extracted_val)) > 80 else ''}\")\n",
-    "        print(f\"  Ground Truth: {str(gt_val)[:80]}{'...' if len(str(gt_val)) > 80 else ''}\")\n",
+    "        print(f\"  Extracted:    {str(extracted_val)}\")\n",
+    "        print(f\"  Ground Truth: {str(gt_val)}\")\n",
     "\n",
     "\n",
     "# ============================================================================\n",
