--- a/bank_statement/ivl3_2b_bank_statement_3turn_table.ipynb
+++ b/bank_statement/ivl3_2b_bank_statement_3turn_table.ipynb
@@ -908,6 +908,277 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cell: Balance-Based Debit/Credit Validation Function\n",
+    "# CRITICAL: Rows must be sorted by date for balance validation to work correctly\n",
+    "# BUT: Returns rows in ORIGINAL order to match ground truth for evaluation\n",
+    "\n",
+    "from dateutil import parser as date_parser\n",
+    "\n",
+    "\n",
+    "def sort_rows_by_date(rows, date_col):\n",
+    "    \"\"\"\n",
+    "    Sort rows by date in chronological order (oldest first).\n",
+    "    \n",
+    "    This is CRITICAL because LLM extraction often returns rows in scrambled order.\n",
+    "    Balance validation requires sequential date order to work correctly.\n",
+    "    \n",
+    "    Args:\n",
+    "        rows: List of dictionaries (parsed markdown table rows)\n",
+    "        date_col: Name of the Date column\n",
+    "    \n",
+    "    Returns:\n",
+    "        Tuple of (sorted_rows, original_indices, was_reordered) where:\n",
+    "        - sorted_rows: Rows sorted by date\n",
+    "        - original_indices: List mapping sorted position -> original position\n",
+    "        - was_reordered: True if sorting changed the order\n",
+    "    \"\"\"\n",
+    "    if not rows or date_col not in rows[0]:\n",
+    "        print(f\"\u26a0\ufe0f  Date column '{date_col}' not found - cannot sort\")\n",
+    "        return rows, list(range(len(rows))), False\n",
+    "    \n",
+    "    def parse_date(date_str):\n",
+    "        \"\"\"Parse date string to datetime for sorting.\"\"\"\n",
+    "        if not date_str or not date_str.strip():\n",
+    "            return None\n",
+    "        try:\n",
+    "            # Use dayfirst=True for Australian date format (DD/MM/YYYY)\n",
+    "            return date_parser.parse(date_str.strip(), dayfirst=True)\n",
+    "        except (ValueError, TypeError):\n",
+    "            return None\n",
+    "    \n",
+    "    # Create list of (parsed_date, original_index, row) for sorting\n",
+    "    dated_rows = []\n",
+    "    for i, row in enumerate(rows):\n",
+    "        parsed = parse_date(row.get(date_col, \"\"))\n",
+    "        dated_rows.append((parsed, i, row))\n",
+    "    \n",
+    "    # Check if any dates failed to parse\n",
+    "    failed_parses = sum(1 for d, _, _ in dated_rows if d is None)\n",
+    "    if failed_parses > len(rows) * 0.5:\n",
+    "        print(f\"\u26a0\ufe0f  Too many date parse failures ({failed_parses}/{len(rows)}) - cannot sort reliably\")\n",
+    "        return rows, list(range(len(rows))), False\n",
+    "    \n",
+    "    # Sort by date (None dates go to end)\n",
+    "    sorted_dated = sorted(dated_rows, key=lambda x: (x[0] is None, x[0]))\n",
+    "    \n",
+    "    # Extract sorted rows and original indices\n",
+    "    sorted_rows = [row for _, _, row in sorted_dated]\n",
+    "    original_indices = [orig_idx for _, orig_idx, _ in sorted_dated]\n",
+    "    \n",
+    "    # Check if order changed\n",
+    "    was_reordered = original_indices != list(range(len(rows)))\n",
+    "    \n",
+    "    return sorted_rows, original_indices, was_reordered\n",
+    "\n",
+    "\n",
+    "def detect_document_order(rows, balance_col):\n",
+    "    \"\"\"\n",
+    "    Detect if document is in chronological or reverse chronological order.\n",
+    "    \n",
+    "    Logic: If balances generally INCREASE going down the table, the document\n",
+    "    is in reverse chronological order (newest first, oldest last).\n",
+    "    \n",
+    "    Returns:\n",
+    "        str: \"chronological\" or \"reverse_chronological\"\n",
+    "    \"\"\"\n",
+    "    def parse_amount(value):\n",
+    "        if not value or value.strip() == \"\":\n",
+    "            return 0.0\n",
+    "        cleaned = value.replace(\"$\", \"\").replace(\",\", \"\").replace(\"CR\", \"\").replace(\"DR\", \"\").strip()\n",
+    "        try:\n",
+    "            return float(cleaned)\n",
+    "        except ValueError:\n",
+    "            return 0.0\n",
+    "    \n",
+    "    if len(rows) < 3:\n",
+    "        return \"chronological\"  # Default assumption\n",
+    "    \n",
+    "    # Sample multiple balance transitions to determine trend\n",
+    "    increases = 0\n",
+    "    decreases = 0\n",
+    "    \n",
+    "    for i in range(1, min(len(rows), 10)):  # Check first 10 rows\n",
+    "        prev_balance = parse_amount(rows[i-1].get(balance_col, \"0\"))\n",
+    "        curr_balance = parse_amount(rows[i].get(balance_col, \"0\"))\n",
+    "        \n",
+    "        if curr_balance > prev_balance + 0.01:\n",
+    "            increases += 1\n",
+    "        elif curr_balance < prev_balance - 0.01:\n",
+    "            decreases += 1\n",
+    "    \n",
+    "    # If balances mostly increase going down \u2192 reverse chronological\n",
+    "    if increases > decreases:\n",
+    "        return \"reverse_chronological\"\n",
+    "    else:\n",
+    "        return \"chronological\"\n",
+    "\n",
+    "\n",
+    "def validate_and_correct_alignment(rows, balance_col, debit_col, credit_col, desc_col, date_col=\"Date\"):\n",
+    "    \"\"\"\n",
+    "    Use balance changes to validate and correct debit/credit alignment.\n",
+    "    \n",
+    "    CRITICAL: This function SORTS rows by date for validation, but RETURNS\n",
+    "    rows in their ORIGINAL order to preserve ground truth alignment for evaluation.\n",
+    "    \n",
+    "    Process:\n",
+    "    1. Sort rows by date (for accurate balance validation)\n",
+    "    2. Validate and correct using sorted order\n",
+    "    3. Map corrections back to original row positions\n",
+    "    4. Return rows in ORIGINAL order with corrections applied\n",
+    "    \n",
+    "    Args:\n",
+    "        rows: List of dictionaries (parsed markdown table rows)\n",
+    "        balance_col: Name of the Balance column\n",
+    "        debit_col: Name of the Debit column\n",
+    "        credit_col: Name of the Credit column\n",
+    "        desc_col: Name of the Description column (to detect opening/closing balance)\n",
+    "        date_col: Name of the Date column (for sorting)\n",
+    "    \n",
+    "    Returns:\n",
+    "        List of corrected row dictionaries (in ORIGINAL order, not sorted)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def parse_amount(value):\n",
+    "        \"\"\"Extract numeric value from formatted currency string.\"\"\"\n",
+    "        if not value or value.strip() == \"\":\n",
+    "            return 0.0\n",
+    "        # Remove currency symbols, commas, CR/DR markers\n",
+    "        cleaned = value.replace(\"$\", \"\").replace(\",\", \"\").replace(\"CR\", \"\").replace(\"DR\", \"\").strip()\n",
+    "        try:\n",
+    "            return float(cleaned)\n",
+    "        except ValueError:\n",
+    "            return 0.0\n",
+    "    \n",
+    "    def is_balance_row(row, desc_col):\n",
+    "        \"\"\"Check if this row is an opening/closing balance row (not a transaction).\"\"\"\n",
+    "        desc = row.get(desc_col, \"\").upper()\n",
+    "        return \"OPENING BALANCE\" in desc or \"CLOSING BALANCE\" in desc\n",
+    "    \n",
+    "    # Check if Balance column exists\n",
+    "    if not rows or balance_col not in rows[0]:\n",
+    "        print(f\"\u26a0\ufe0f  Balance column '{balance_col}' not found - skipping validation\")\n",
+    "        return rows\n",
+    "    \n",
+    "    # CRITICAL: Sort rows by date FIRST for accurate validation\n",
+    "    print(\"\ud83d\udcc5 Sorting rows by date for accurate balance validation...\")\n",
+    "    sorted_rows, original_indices, was_reordered = sort_rows_by_date(rows, date_col)\n",
+    "    \n",
+    "    if was_reordered:\n",
+    "        print(\"\u2705 Rows were reordered by date (LLM extraction was not in date order)\")\n",
+    "    else:\n",
+    "        print(\"\u2705 Rows were already in date order\")\n",
+    "    \n",
+    "    # After sorting, detect document order on the sorted rows\n",
+    "    doc_order = detect_document_order(sorted_rows, balance_col)\n",
+    "    print(f\"\ud83d\udcca Document order detected (after sort): {doc_order.upper()}\")\n",
+    "    \n",
+    "    if doc_order == \"reverse_chronological\":\n",
+    "        print(\"\ud83d\udca1 Reverse chronological detected even after date sorting\")\n",
+    "        print(\"\ud83d\udca1 Validation logic inverted: balance increase \u2192 DEBIT, balance decrease \u2192 CREDIT\")\n",
+    "    \n",
+    "    # Create a copy of original rows for correction (preserves original order)\n",
+    "    corrected_rows = [row.copy() for row in rows]\n",
+    "    corrections_made = 0\n",
+    "    \n",
+    "    # Build reverse mapping: original_index -> sorted_index\n",
+    "    sorted_to_original = {sorted_idx: orig_idx for sorted_idx, orig_idx in enumerate(original_indices)}\n",
+    "    \n",
+    "    # Track which sorted indices are balance rows (to skip)\n",
+    "    balance_row_indices = set()\n",
+    "    for sorted_idx, row in enumerate(sorted_rows):\n",
+    "        if is_balance_row(row, desc_col):\n",
+    "            balance_row_indices.add(sorted_idx)\n",
+    "    \n",
+    "    # Validate using SORTED order, apply corrections to ORIGINAL positions\n",
+    "    start_idx = 0\n",
+    "    \n",
+    "    # Check if row 0 (in sorted order) is an opening balance row\n",
+    "    if sorted_rows and is_balance_row(sorted_rows[0], desc_col):\n",
+    "        print(f\"\u2705 Sorted row 0: Opening/closing balance detected - skipping (not a transaction)\")\n",
+    "        start_idx = 1\n",
+    "    elif sorted_rows:\n",
+    "        print(f\"\u2705 Sorted row 0: First transaction included without validation (no previous balance to compare)\")\n",
+    "        start_idx = 1\n",
+    "    \n",
+    "    # Validate remaining rows using sorted order\n",
+    "    for sorted_idx in range(start_idx, len(sorted_rows)):\n",
+    "        current_row = sorted_rows[sorted_idx]\n",
+    "        original_idx = original_indices[sorted_idx]\n",
+    "        \n",
+    "        # Skip balance rows\n",
+    "        if sorted_idx in balance_row_indices:\n",
+    "            print(f\"\u26a0\ufe0f  Sorted row {sorted_idx}: Opening/closing balance row detected - skipping\")\n",
+    "            continue\n",
+    "        \n",
+    "        # Find previous non-balance row in sorted order\n",
+    "        prev_sorted_idx = sorted_idx - 1\n",
+    "        while prev_sorted_idx >= 0 and prev_sorted_idx in balance_row_indices:\n",
+    "            prev_sorted_idx -= 1\n",
+    "        \n",
+    "        if prev_sorted_idx < 0:\n",
+    "            print(f\"\u2705 Sorted row {sorted_idx}: First transaction after balance row - included without validation\")\n",
+    "            continue\n",
+    "        \n",
+    "        # Parse balances from sorted rows\n",
+    "        prev_balance = parse_amount(sorted_rows[prev_sorted_idx].get(balance_col, \"0\"))\n",
+    "        curr_balance = parse_amount(current_row.get(balance_col, \"0\"))\n",
+    "        \n",
+    "        # Calculate balance change\n",
+    "        balance_change = curr_balance - prev_balance\n",
+    "        \n",
+    "        # Parse current debit/credit values\n",
+    "        debit_value = parse_amount(current_row.get(debit_col, \"\"))\n",
+    "        credit_value = parse_amount(current_row.get(credit_col, \"\"))\n",
+    "        \n",
+    "        # Determine if correction needed and apply to ORIGINAL position\n",
+    "        correction_needed = False\n",
+    "        swap_to_debit = False  # True = move from Credit to Debit, False = move from Debit to Credit\n",
+    "        \n",
+    "        if doc_order == \"reverse_chronological\":\n",
+    "            if balance_change > 0.01 and credit_value > 0 and debit_value == 0:\n",
+    "                correction_needed = True\n",
+    "                swap_to_debit = True\n",
+    "                print(f\"\u26a0\ufe0f  Row {original_idx} (sorted {sorted_idx}): Balance increased by ${balance_change:.2f} \u2192 moving ${credit_value:.2f} Credit \u2192 Debit\")\n",
+    "            elif balance_change < -0.01 and debit_value > 0 and credit_value == 0:\n",
+    "                correction_needed = True\n",
+    "                swap_to_debit = False\n",
+    "                print(f\"\u26a0\ufe0f  Row {original_idx} (sorted {sorted_idx}): Balance decreased by ${abs(balance_change):.2f} \u2192 moving ${debit_value:.2f} Debit \u2192 Credit\")\n",
+    "        else:\n",
+    "            if balance_change > 0.01 and debit_value > 0 and credit_value == 0:\n",
+    "                correction_needed = True\n",
+    "                swap_to_debit = False\n",
+    "                print(f\"\u26a0\ufe0f  Row {original_idx} (sorted {sorted_idx}): Balance increased by ${balance_change:.2f} \u2192 moving ${debit_value:.2f} Debit \u2192 Credit\")\n",
+    "            elif balance_change < -0.01 and credit_value > 0 and debit_value == 0:\n",
+    "                correction_needed = True\n",
+    "                swap_to_debit = True\n",
+    "                print(f\"\u26a0\ufe0f  Row {original_idx} (sorted {sorted_idx}): Balance decreased by ${abs(balance_change):.2f} \u2192 moving ${credit_value:.2f} Credit \u2192 Debit\")\n",
+    "        \n",
+    "        # Apply correction to the ORIGINAL position\n",
+    "        if correction_needed:\n",
+    "            if swap_to_debit:\n",
+    "                corrected_rows[original_idx][debit_col] = corrected_rows[original_idx][credit_col]\n",
+    "                corrected_rows[original_idx][credit_col] = \"\"\n",
+    "            else:\n",
+    "                corrected_rows[original_idx][credit_col] = corrected_rows[original_idx][debit_col]\n",
+    "                corrected_rows[original_idx][debit_col] = \"\"\n",
+    "            corrections_made += 1\n",
+    "    \n",
+    "    print(f\"\\n\u2705 Balance validation complete: {corrections_made} corrections made\")\n",
+    "    print(f\"\u2705 Total rows processed: {len(rows)} (returned in ORIGINAL order)\")\n",
+    "    return corrected_rows\n",
+    "\n",
+    "print(\"\u2705 Balance validation function defined\")\n",
+    "print(\"\ud83d\udca1 CRITICAL: Rows are SORTED BY DATE for validation accuracy\")\n",
+    "print(\"\ud83d\udca1 CRITICAL: Rows are RETURNED IN ORIGINAL ORDER for ground truth evaluation\")\n",
+    "print(\"\ud83d\udca1 Opening/closing balance rows are automatically detected and skipped\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from dateutil import parser as date_parser\n",
     "\n",
     "\n",
