Refactor code structure for improved readability and maintainability

--- a/bank_statement/ivl3_5_8b_bank_statement_3turn_table.ipynb
+++ b/bank_statement/ivl3_5_8b_bank_statement_3turn_table.ipynb
@@ -2119,6 +2119,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b6ca1c49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display filtered debit transactions table (Date, Description, Debit only)\n",
+    "print(\"=\" * 70)\n",
+    "print(\"FILTERED DEBIT TRANSACTIONS (for evaluation):\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "def debit_rows_to_html(rows, date_col, desc_col, debit_col):\n",
+    "    \"\"\"Convert debit rows to HTML table with only Date, Description, Debit columns.\"\"\"\n",
+    "    if not rows:\n",
+    "        return \"<p>No debit transactions found</p>\"\n",
+    "    \n",
+    "    html_parts = ['<table border=\"1\" style=\"border-collapse: collapse; width: 100%;\">']\n",
+    "    \n",
+    "    # Header row\n",
+    "    html_parts.append('<tr style=\"background-color: #f0f0f0;\">')\n",
+    "    html_parts.append(f'<th style=\"padding: 8px; text-align: left; width: 12%;\">{date_col}</th>')\n",
+    "    html_parts.append(f'<th style=\"padding: 8px; text-align: left; width: 70%;\">{desc_col}</th>')\n",
+    "    html_parts.append(f'<th style=\"padding: 8px; text-align: right; width: 18%;\">{debit_col}</th>')\n",
+    "    html_parts.append('</tr>')\n",
+    "    \n",
+    "    # Data rows\n",
+    "    for row in rows:\n",
+    "        html_parts.append('<tr>')\n",
+    "        html_parts.append(f'<td style=\"padding: 8px;\">{row.get(date_col, \"\")}</td>')\n",
+    "        html_parts.append(f'<td style=\"padding: 8px;\">{row.get(desc_col, \"\")}</td>')\n",
+    "        html_parts.append(f'<td style=\"padding: 8px; text-align: right;\">{row.get(debit_col, \"\")}</td>')\n",
+    "        html_parts.append('</tr>')\n",
+    "    \n",
+    "    html_parts.append('</table>')\n",
+    "    return '\\n'.join(html_parts)\n",
+    "\n",
+    "html_table = debit_rows_to_html(debit_rows, date_col, desc_col, debit_col)\n",
+    "display(HTML(html_table))\n",
+    "\n",
+    "print(f\"\\n📊 Total debit transactions: {len(debit_rows)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b9cad41f",
    "metadata": {},
    "outputs": [],
