Refactor model path and tile configuration to use CONFIG variables for improved flexibility

--- a/bank_statement/ivl3_8b_bank_statement_2turn_balance_prompt.ipynb
+++ b/bank_statement/ivl3_8b_bank_statement_2turn_balance_prompt.ipynb
@@ -174,8 +174,8 @@
    "source": [
     "# Cell 3: Load InternVL3-8B model with memory-aware loading strategy\n",
     "\n",
-    "MODEL_PATH = \"/home/jovyan/nfs_share/models/InternVL3-8B\"\n",
-    "MAX_TILES = 24  # L40 optimized\n",
+    "MODEL_PATH = CONFIG[\"MODEL_PATH\"]\n",
+    "MAX_TILES = CONFIG[\"MAX_TILES\"]\n",
     "\n",
     "# Image preprocessing constants\n",
     "IMAGENET_MEAN = (0.485, 0.456, 0.406)\n",
